working on fixing mobile nav collapse

--- a/easybank landing page/styles/styles.scss
+++ b/easybank landing page/styles/styles.scss
@@ -50,6 +50,10 @@ h6 {
   align-items: center;
 }
 
+.nav-list-container {
+  position: relative;
+}
+
 .nav-list-container.active {
   width: 80%;
   margin-top: 2rem;
@@ -59,6 +63,27 @@ h6 {
   position: absolute;
   left: 10%;
   top: 85%;
+  align-items: center;
+}
+
+.collapsing {
+  width: 80vw;
+  margin-top: 2rem;
+  background-color: yellow;
+  border-radius: 0.5rem;
+  z-index: 10;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  top: 90%;
+}
+
+.collapse {
+  background-color: myVariables.$white;
+  border-radius: 0.5rem;
+  z-index: 10;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .navbar-collapse.show {
